--- a/src/index.css
+++ b/src/index.css
@@ -199,6 +199,9 @@ footer{
 
   a:hover {
     color: var(--white);
+    background-color: var(--darkgreen);
+    border-radius: 3px;
+    padding: 4px;
     text-decoration: none;
   }
 
